# clean-speech

./: .gitignore  FIX_PROPOSALS.md  LICENSE  README.md  config.example.toml  pyproject.toml  tests_smoke.py
.github/workflows/: tests.yml
lib/: README.md  libggml-base.so.0  libggml.so.0  liblocalvqe.so.0
profiles/: echo-vad.toml  nlms-aec.toml  passthrough.toml  spectral-experiment.toml  stage-wav-debug.toml
scripts/: create-virtual-source.sh  install-user-service.sh  record-socket.py
src/clean_speech_daemon/: __main__.py  aec.py  audio.py  config.py  control.py  daemon.py  delay_align.py  diagnostics.py  neural_aec.py  outputs.py  processing.py  sync.py
systemd/: clean-speech-daemon.service
testbed/: README.md  clean_speech_testbed.py  replay_session.py
tests/: test_aec_pipeline_fixes.py  test_audio.py  test_config.py  test_control.py  test_daemon.py  test_delay_align.py  test_echo_cancellation.py  test_neural_aec.py  test_outputs_nonblocking.py  test_realistic_echo.py  test_runtime_config.py  test_runtime_tuning.py  test_sync.py
tools/: aec_compare.py  neural_aec.py
