[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-speech-daemon"
version = "0.1.0"
description = "Background microphone audio cleanup daemon for Ubuntu"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "sounddevice>=0.4",
  "soundfile>=0.12",
]

[project.scripts]
clean-speech-daemon = "clean_speech_daemon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
