[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-speech-daemon"
version = "0.1.0"
description = "Background microphone audio cleanup daemon for Linux (echo cancellation, noise suppression, VAD)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Caleb Taylor" }]
keywords = ["audio", "echo-cancellation", "aec", "noise-suppression", "vad", "pipewire", "microphone"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
  "numpy>=1.24",
  "sounddevice>=0.4",
  "soundfile>=0.12",
]

[project.urls]
Homepage = "https://github.com/calebtt/clean-speech"
Repository = "https://github.com/calebtt/clean-speech"
Issues = "https://github.com/calebtt/clean-speech/issues"

[project.scripts]
clean-speech-daemon = "clean_speech_daemon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
